// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAssetsToNotebookContainer initialises correctly when all properties are specified in the URL 1`] = `
<div>
  <div>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Add one or multiple assets to a notebook. To choose assets, a project and notebook must first be selected. If any assets are selected that already exist on the notebook, these won't be re-added.
    </p>
    <div>
      Form: {"projectOptions":[{"value":"project1","text":"project1 (project1)"},{"value":"project2","text":"project2 (project2)"}],"notebookOptions":[{"value":"n1","text":"notebook1 (n1)"}]}
    </div>
  </div>
</div>
`;

exports[`AddAssetsToNotebookContainer initialises correctly when project and notebook are specified in the URL 1`] = `
<div>
  <div>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Add one or multiple assets to a notebook. To choose assets, a project and notebook must first be selected. If any assets are selected that already exist on the notebook, these won't be re-added.
    </p>
    <div>
      Form: {"projectOptions":[{"value":"project1","text":"project1 (project1)"},{"value":"project2","text":"project2 (project2)"}],"notebookOptions":[{"value":"n1","text":"notebook1 (n1)"}]}
    </div>
  </div>
</div>
`;

exports[`AddAssetsToNotebookContainer passes the correct props to the form when there are no projects or notebooks 1`] = `
<div>
  <div>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Add one or multiple assets to a notebook. To choose assets, a project and notebook must first be selected. If any assets are selected that already exist on the notebook, these won't be re-added.
    </p>
    <div>
      Form: {"projectOptions":[],"notebookOptions":[]}
    </div>
  </div>
</div>
`;

exports[`AddAssetsToNotebookContainer passes the correct props to the form when there are projects and notebooks and a project is selected 1`] = `
<div>
  <div>
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Add one or multiple assets to a notebook. To choose assets, a project and notebook must first be selected. If any assets are selected that already exist on the notebook, these won't be re-added.
    </p>
    <div>
      Form: {"projectOptions":[{"value":"project1","text":"project1 (project1)"},{"value":"project2","text":"project2 (project2)"}],"notebookOptions":[{"value":"n1","text":"notebook1 (n1)"}]}
    </div>
  </div>
</div>
`;
